# CPP-Grad

./: CMakeLists.txt  bindings.cpp  grad  main.cpp  setup.py  test_gd.py
include/: GradientDescent.hpp  LinearReg.hpp  OptimizationProblem.hpp  QuadraticOptimizationProb.hpp
src/: GradientDescent.cpp  LinearReg.cpp  QuadraticOptimizationProb.cpp
